# smolbotbot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROBOT_TABLE  accounts.py  alt.json  botlookup.py  changelog.md  config.go  config_template.yaml  contentgen.py  data_setup.py  database.go  database.py  docker-compose.yml  get_tweet_test.sh  go.mod  go.sum  initdata.py  keyword-blacklist.txt  log.py  main.py  manual.py  manualdbedit.py  migrate.go  parse.go  parse_test.go  read_tweet.sh  robot-data.csv  robotdata.py  robots.py  run.py  search.py  services_template.yaml  setup.py  setuptest.py  (+7 more)
api/: api.go  apiqueries.go  main.go  queries.go  robotqueries.go  robots.go
api/smolapi/: api.go  queries.go  robotqueries.go  robots.go
cmd/migrate/: migrate.go
data/: botd-intros.txt  ignore-phrases.txt  keyword-blacklist.txt  old-robot-table.csv  request-blacklist.txt  robot-data.csv
database/: Dockerfile  config.go  connect.go  init.sql  mysql.go  postgresql.go
default/: default_config.json
docker/runtime/: entry.sh
docker_runtime/: bootstrap.sh  daily.crontab  daily.sh  entry.sh  images_missing.sh  savealt.sh  saveids.crontab  saveids.sh  timeline.crontab  timeline.sh
migrations/: 001.sql
model/: dm.go  foreign.go  models.go  past_daily.go  robot.go  scheduled_daily.go  tag.go  tweet.go
nlpewee/: Cargo.toml  build.rs
nlpewee/proto/: nlpewee.proto
nlpewee/src/: client.rs  data.rs  deserialize.rs  error.rs  language.rs  lib.rs
old/: main.py  splintersearch.py
sbb_botd/: Cargo.toml
sbb_botd/src/: error.rs  main.rs
sbb_census/: Cargo.toml
sbb_census/src/: main.rs
sbb_data/: Cargo.toml
sbb_data/migrations/2021-01-05-192607_create_robot_groups/: down.sql  up.sql
sbb_data/migrations/2021-01-05-193905_create_robots/: down.sql  up.sql
sbb_data/migrations/2021-01-05-194842_create_tags/: up.sql
sbb_data/migrations/2021-01-05-194842_tags/: up.sql
sbb_data/migrations/2021-01-05-195234_create_past_dailies/: down.sql  up.sql
sbb_data/migrations/2021-01-05-195558_create_scheduled_dailies/: down.sql  up.sql
sbb_data/migrations/2021-01-05-195558_scheduled_dailies/: down.sql
sbb_data/migrations/2021-01-05-200627_create_reply_tweets/: down.sql  up.sql
sbb_data/migrations/2021-01-05-200627_reply_tweet/: down.sql
sbb_data/migrations/2021-01-28-131314_create_tagged_markers/: down.sql  up.sql
sbb_data/src/: connect.rs  create.rs  lib.rs  model.rs  new.rs  schema.rs
sbb_img/: Cargo.toml
sbb_img/src/: error.rs  main.rs
sbb_parse/: Cargo.toml
sbb_parse/src/: lib.rs  parse.rs  robot.rs  twitter.rs
sbb_scribe/: Cargo.toml
sbb_scribe/src/: error.rs  main.rs
sbb_tagger/: Cargo.toml
sbb_tagger/src/: main.rs  stop_stems
services/: Cargo.toml
services/src/: lib.rs
smolbotbot/: __init__.py  accounts.py  bot.py  contentgen.py  data.py  database.py  log.py  manual.py  robotdata.py  robots.py  search.py  smolbotbot.py  twitter.py
smolbotbot/data/: greetings.txt
src/: alt.rs  error.rs  export.rs  fetch.rs  images.rs  main.rs  model.rs  parse.rs  plural.rs  post.rs  scribe.rs  timeline.rs
src/data/: greetings  intros
strutils/: split.go  split_test.go
