[package]
name = "smolbotbot"
version = "0.1.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Smolbotbot Twitter Bot"

[features]
default = ["dotenv", "default-config-file", "tonic-rustfmt"]
default-config-file = []
tonic-rustfmt = ["goldcrest/tonic-rustfmt"]

[dependencies]
goldcrest = { git = "https://github.com/Pantonshire/goldcrest", branch = "main", default-features = false }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = "0.4"
lazy_static = "1"
regex = "1"
unidecode = "0.3"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
rand = "0.8"
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
governor = "0.4"
image = { version = "0.24", features = ["jpeg", "png"], default-features = false }
url = "2"
nonzero_ext = "0.3"
dotenv = { version = "0.15", optional = true }

