[package]
name = "sbb_botd"
version = "0.2.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
description = "Tweet the Small Robot of the day"

[dependencies]
services = { path = "../services" }
sbb_data = { path = "../sbb_data" }
goldcrest = { git = "https://github.com/Pantonshire/goldcrest", branch = "main" }
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
chrono = "0.4"
clap = "3.0.0-beta.2"
fastrand = "1.4"
