[package]
name = "sbb_botd"
version = "0.3.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tweet the Small Robot of the day"

[features]
default = ["dotenv"]

[dependencies]
services = { path = "../services" }
goldcrest = { git = "https://github.com/Pantonshire/goldcrest", branch = "main" }
const_format = "0.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
chrono = "0.4"
clap = "3.0.0-beta.2"
fastrand = "1.4"
dotenv = { version = "0.15", optional = true }
