[package]
name = "sbb_census"
version = "0.1.1"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
description = "Gather the list of robot Tweet IDs and export it to plaintext"

[dependencies]
sbb_data = { path = "../sbb_data" }
diesel = { version = "1.4", features = ["postgres", "chrono"] }
clap = "3.0.0-beta.2"
