[package]
name = "sbb_census"
version = "0.3.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Gather the list of robot Tweet IDs and export it to plaintext"

[features]
default = ["dotenv"]

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
clap = "3.0.0-beta.2"
dotenv = { version = "0.15", optional = true }
