[package]
name = "sbb_parse"
version = "0.1.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
description = "Small Robots Tweet parser for Smolbotbot"

[features]
twitter = ["goldcrest", "sbb_data"]

[dependencies]
sbb_data = { path = "../sbb_data", optional = true }
goldcrest = { git = "https://github.com/Pantonshire/goldcrest", branch = "main", optional = true }
lazy_static = "1.4"
regex = "1"
unidecode = "0.3"
