[package]
name = "sbb_scribe"
version = "0.3.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tool for parsing and storing Small Robots Tweets en masse"

[features]
default = ["dotenv"]

[dependencies]
services = { path = "../services" }
sbb_parse = { path = "../sbb_parse" }
goldcrest = { git = "https://github.com/Pantonshire/goldcrest", branch = "main" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
chrono = "0.4"
clap = "3.0.0-beta.2"
dotenv = { version = "0.15", optional = true }
